# clinica-360-backend

./: .dockerignore  .env.example  .gitignore  .python-version  DEPLOY-RAILWAY.md  DEPLOY-RENDER.md  DEPLOY-SUPABASE-RAILWAY.md  DEPLOY-VPS.md  Dockerfile  Makefile  Procfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env.example  env.render.example  env.supabase-railway.example  pyproject.toml  railway.json  render-simple.yaml  render.yaml  requirements.txt  start.sh
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  1ec82a74c38c_initial_migration_create_tables.py  932bd1aca42b_initial_migration.py
app/: __init__.py  main.py
app/api/: auth.py  users.py
app/api/api_v1/: __init__.py  api.py
app/api/api_v1/endpoints/: __init__.py  appointments.py  auth.py  doctors.py  patients.py  users.py
app/core/: __init__.py  config.py  deps.py  security.py
app/db/: __init__.py  base.py  database.py  session.py
app/models/: appointment.py  doctor.py  patient.py  user.py
app/schemas/: auth.py
scripts/: generate_openapi.py  init_db.py  setup.py
